--- a/Prevu.Synoptics.V3085_Anviplas/D298.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/D298.xaml
@@ -10,12 +10,12 @@
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="319" Width="443">
-        <Pits:PSP_Collecting_Pit_A HorizontalAlignment="Left" VerticalAlignment="Center" Width="405" Height="293" Canvas.Left="17" Canvas.Top="17"/>
-        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="298-61-LEV" SignalName="LSHA" Canvas.Left="202" Canvas.Top="104"/>
-        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="298-61-LEV" SignalName="LSH" Canvas.Left="201" Canvas.Top="145" />
-        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="298-61-LEV" SignalName="LSL" Canvas.Left="202" Canvas.Top="233"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
+        <Machines:V01_PSP_Pit Canvas.Left="17" Canvas.Top="17" Height="293" Width="405" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="298-61-LEV" SignalName="LSHA" Canvas.Left="196" Canvas.Top="104"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="298-61-LEV" SignalName="LSH" Canvas.Left="195" Canvas.Top="145" />
+        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="298-61-LEV" SignalName="LSL" Canvas.Left="196" Canvas.Top="233"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
 		VerticalAlignment="Top" 
-		ComponentName="298-61-LEV" Canvas.Left="92" Canvas.Top="50"/>
+		ComponentName="298-61-LEV" Canvas.Left="52" Canvas.Top="41"/>
     </Canvas>
 </UserControl>
