--- a/Prevu.Synoptics.V3085_Anviplas/D430_2.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/D430_2.xaml
@@ -10,7 +10,7 @@
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="359" Width="565">
-        <Separation:VSP_DETAILDISTRIBUTORS_SeparationTank_wMotorsAndScrew Height="323" Canvas.Left="10" Canvas.Top="30" Width="545" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_VSP_DETAIL_SepTank_w4Distributors Canvas.Left="10" Canvas.Top="30" Height="323" Width="545" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
 		VerticalAlignment="Center" 
 		ComponentName="430-02-MA1" Canvas.Left="81" Canvas.Top="22"/>
