--- a/Prevu.Synoptics.V3085_Anviplas/D430.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/D430.xaml
@@ -10,7 +10,7 @@
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="270" Width="829">
-        <Separation:VSP_DETAILPADDLES_SeparationTank_wMotorsAndScrew VerticalAlignment="Top" Height="254" Canvas.Left="10" Canvas.Top="10" Width="812"/>
+        <Machines:V01_VSP_DETAIL_SepTank_w7Paddles_4Distributor Canvas.Left="10" Canvas.Top="24" Height="233" Width="812" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
 		VerticalAlignment="Top" 
 		ComponentName="430-01-MA1" Canvas.Left="6" Canvas.Top="110"/>
