--- a/Prevu.Synoptics.V3085_Anviplas/D560.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/D560.xaml
@@ -15,6 +15,7 @@
         <Machines:DRY_HeatingBattery HorizontalAlignment="Left" Margin="41,65,0,0" VerticalAlignment="Top" Height="65" Width="66"/>
         <Machines:DRY_HeatingBattery HorizontalAlignment="Left" Margin="157,65,0,0" VerticalAlignment="Top" Height="65" Width="66"/>
         <Machines:DRY_HeatingBattery HorizontalAlignment="Left" Margin="273,65,0,0" VerticalAlignment="Top" Height="65" Width="66"/>
+        <Rectangle HorizontalAlignment="Left" Height="30" Margin="469,83,0,0" Stroke="Black" VerticalAlignment="Top" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="358,26,0,0" 
             VerticalAlignment="Top" 
@@ -25,15 +26,5 @@
             ComponentName="560-12-R1" Canvas.Left="145" Canvas.Top="141" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
             ComponentName="560-11-R1" Height="52" VerticalAlignment="Center" Canvas.Left="261" Canvas.Top="140" HorizontalAlignment="Center"/>
-        <Rectangle HorizontalAlignment="Left" Height="30" Margin="469,83,0,0" Stroke="Black" VerticalAlignment="Top" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5">
-            <Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Rectangle.RenderTransform>
-        </Rectangle>
     </Canvas>
 </UserControl>
