--- a/Prevu.Synoptics.V3085_Anviplas/P474.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P474.xaml
@@ -9,167 +9,127 @@
              xmlns:FiltroPressa="clr-namespace:Prevu.Drawings.Machines.FiltroPressa;assembly=Prevu.Drawings" 
              x:Class="Prevu.Synoptics.P474" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
-  <Canvas>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="310" StatusComponent="474-04-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="791" Canvas.Top="692">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="0"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="108" StatusComponent="492-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="1135" Canvas.Top="686"/>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="66" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="482-21-CV1" Canvas.Left="1085" Canvas.Top="638">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="132" StatusComponent="474-04-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="728" Canvas.Top="630">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="98" StatusComponent="470-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="620" Canvas.Top="249">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="245" StatusComponent="470-01-MA1" PipeHeight="Medium" Canvas.Left="429" Canvas.Top="205"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="407,186,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="46" StatusComponent="350-01-MA1" PipeHeight="Medium" Height="10">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="136,93,0,0" VerticalAlignment="Top" Width="170" StatusComponent="430-01-MA1" PipeHeight="Medium" Height="10"/>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Width="147" Color="Water" StatusComponent="470-01-MA1" VisibilityComponent="" Canvas.Left="146" Canvas.Top="238"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="255,205,0,0" VerticalAlignment="Top" Width="71" Color="Water" StatusComponent="470-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="80" Color="Air" StatusComponent="474-23-CV1" VisibilityComponent="" Canvas.Left="807" Canvas.Top="493"/>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="36" Color="Air" VisibilityComponent="" StatusComponent="474-41-PT1" Canvas.Left="910" Canvas.Top="493"/>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="80" Color="Air" StatusComponent="474-22-CV1" VisibilityComponent="" Canvas.Left="807" Canvas.Top="421"/>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="34" Color="Air" VisibilityComponent="" StatusComponent="474-41-PT1" Canvas.Left="912" Canvas.Top="421"/>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="80" Color="Air" StatusComponent="474-21-CV1" VisibilityComponent="" Canvas.Left="807" Canvas.Top="353"/>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="34" Color="Air" VisibilityComponent="" StatusComponent="474-41-PT1" Canvas.Left="912" Canvas.Top="353"/>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="218" Color="Air" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" StatusComponent="474-41-PT1" Canvas.Left="835" Canvas.Top="386">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="80" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="482-21-CV1" Canvas.Left="1046" Canvas.Top="612">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
-          <SkewTransform/>
-          <RotateTransform Angle="0"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" Margin="278,57,0,0" VerticalAlignment="Top" Height="180" Width="150" RenderTransformOrigin="0.5,0.5">
-      <Machines:DCE_DryingCentrifuge.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Machines:DCE_DryingCentrifuge.RenderTransform>
-    </Machines:DCE_DryingCentrifuge>
-    <Blowers:VT_CMM_BlowerAirCompressor VerticalAlignment="Center" Height="54" Canvas.Left="1091" Canvas.Top="670" HorizontalAlignment="Left"/>
-    <FiltroPressa:FP_FiltroPressa_w3Screw HorizontalAlignment="Left" Width="372" Height="365" Canvas.Left="540" Canvas.Top="250" VerticalAlignment="Center"/>
-    <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" Height="43" Width="39" Canvas.Left="880" Canvas.Top="474"/>
-    <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" Height="43" Width="39" Canvas.Left="880" Canvas.Top="402"/>
-    <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" Height="43" Width="39" Canvas.Left="880" Canvas.Top="334"/>
-    <Rectangle HorizontalAlignment="Left" Height="35" Stroke="Black" VerticalAlignment="Center" Width="2" Canvas.Left="943" Canvas.Top="248"/>
-    <Ellipse HorizontalAlignment="Left" Height="16" Stroke="#FFBDBDBD" VerticalAlignment="Center" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="936" Canvas.Top="272"/>
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
+    <Canvas>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="310" StatusComponent="474-04-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="866" Canvas.Top="707"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="108" StatusComponent="492-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="1210" Canvas.Top="701"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="62" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="492-21-CV1" Canvas.Left="1162" Canvas.Top="656">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="132" StatusComponent="474-04-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="803" Canvas.Top="645">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="98" StatusComponent="470-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="695" Canvas.Top="264">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="245" StatusComponent="470-01-MA1" PipeHeight="Medium" Canvas.Left="504" Canvas.Top="220"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="170" StatusComponent="430-01-MA1" PipeHeight="Medium" Height="10" Canvas.Left="151" Canvas.Top="63"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="147" Color="Water" StatusComponent="470-01-MA1" VisibilityComponent="" Canvas.Left="216" Canvas.Top="283"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="71" Color="Water" StatusComponent="470-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="326" Canvas.Top="250">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="80" Color="Air" StatusComponent="474-23-CV1" VisibilityComponent="" Canvas.Left="882" Canvas.Top="508"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="36" Color="Air" VisibilityComponent="" StatusComponent="474-41-PT1" Canvas.Left="985" Canvas.Top="508"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="80" Color="Air" StatusComponent="474-22-CV1" VisibilityComponent="" Canvas.Left="882" Canvas.Top="436"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="34" Color="Air" VisibilityComponent="" StatusComponent="474-41-PT1" Canvas.Left="987" Canvas.Top="436"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="80" Color="Air" StatusComponent="474-21-CV1" VisibilityComponent="" Canvas.Left="882" Canvas.Top="368"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="34" Color="Air" VisibilityComponent="" StatusComponent="474-41-PT1" Canvas.Left="987" Canvas.Top="368"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="218" Color="Air" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" StatusComponent="474-41-PT1" Canvas.Left="910" Canvas.Top="401">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="64" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="492-21-CV1" Canvas.Left="1131" Canvas.Top="627"/>
+        <Machines:V01_WCE_Centrifuge Canvas.Left="302" Canvas.Top="43" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Blowers:VT_CMM_BlowerAirCompressor VerticalAlignment="Top" Height="54" Canvas.Left="1166" Canvas.Top="685" HorizontalAlignment="Center"/>
+        <Machines:V01_FP_FiltroPressa_w3Screw Canvas.Left="615" Canvas.Top="265" Height="365" Width="372" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:CV_Valve HorizontalAlignment="Center" VerticalAlignment="Top" Height="43" Width="39" Canvas.Left="955" Canvas.Top="489"/>
+        <Machines:CV_Valve HorizontalAlignment="Center" VerticalAlignment="Top" Height="43" Width="39" Canvas.Left="955" Canvas.Top="417"/>
+        <Machines:CV_Valve HorizontalAlignment="Center" VerticalAlignment="Top" Height="43" Width="39" Canvas.Left="955" Canvas.Top="349"/>
+        <Rectangle HorizontalAlignment="Center" Height="35" Stroke="Black" VerticalAlignment="Top" Width="2" Canvas.Left="1018" Canvas.Top="263"/>
+        <Ellipse HorizontalAlignment="Center" Height="16" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="1011" Canvas.Top="287"/>
+        <Labels:JumpLabel 
+            JumpFromLabel="482-21-CV1" 
+            JumpToLabel="492-21-CV1" Canvas.Left="1049" Canvas.Top="601" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="492-01-MA1" Canvas.Left="1075" Canvas.Top="733"/>
-    <Labels:JumpLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
             JumpFromLabel="492-01-MA1" 
-            JumpToLabel="520-01-MA1" Canvas.Left="1202" Canvas.Top="663"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="452,78,0,0" 
+            JumpToLabel="520-01-MA1" Canvas.Left="1277" Canvas.Top="678"/>
+        <Labels:JumpLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="470-01-MA1"/>
-    <Labels:JumpLabel HorizontalAlignment="Left" 
-            Margin="106,62,0,0" 
-            VerticalAlignment="Top" 
-            JumpFromLabel="460-01-MA1" 
-            JumpToLabel="430-01-MA1"/>
-    <Labels:JumpLabel HorizontalAlignment="Left" 
-            Margin="106,205,0,0" 
-            VerticalAlignment="Top" 
-            JumpFromLabel="460-01-MA1" 
-            JumpToLabel="444-01-MA1" Direction="Left"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
+            JumpFromLabel="470-01-MA1" 
+            JumpToLabel="430-01-MA1" Canvas.Left="121" Canvas.Top="32"/>
+        <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="474-23-CV1" Canvas.Left="959" Canvas.Top="470"/>
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
+            JumpFromLabel="470-01-MA1" 
+            JumpToLabel="444-01-MA1" Direction="Left" Canvas.Left="177" Canvas.Top="250"/>
+        <Labels:DetailsLabel ComponentName="474-VIEW" DetailsPageName="D474" HideComponentName="True" HorizontalAlignment="Left" Canvas.Left="888" Canvas.Top="262" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="492-01-MA1" Canvas.Left="1150" Canvas.Top="748"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Top" 
+            ComponentName="470-01-MA1" Canvas.Left="525" Canvas.Top="53"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="474-23-CV1" Canvas.Left="1034" Canvas.Top="485"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
 		VerticalAlignment="Top" 
-		ComponentName="474-F-PRESS" Canvas.Left="518" Canvas.Top="247"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="474-01-MA1" Canvas.Left="518" Canvas.Top="329"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="474-02-MA1" Canvas.Left="518" Canvas.Top="398"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="474-03-MA1" Canvas.Left="518" Canvas.Top="470"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="474-04-MA1" Canvas.Left="650" Canvas.Top="547"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="474-22-CV1" Canvas.Left="959" Canvas.Top="398"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="474-21-CV1" Canvas.Left="959" Canvas.Top="329"/>
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
+		ComponentName="474-F-PRESS" Canvas.Left="593" Canvas.Top="262"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="474-41-PT1" Canvas.Left="900" Canvas.Top="201"/>
-    <Labels:DeviceLabel 
-            ComponentName="474-61-LEV" Canvas.Left="714" Canvas.Top="247" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:JumpLabel 
-            JumpFromLabel="492-01-MA1" 
-            JumpToLabel="482-21-CV1" Canvas.Left="965" Canvas.Top="586" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:DetailsLabel ComponentName="474-VIEW" DetailsPageName="D470" HideComponentName="True" HorizontalAlignment="Left" Canvas.Left="809" Canvas.Top="247" VerticalAlignment="Center"/>
-  </Canvas>
+            ComponentName="474-01-MA1" Canvas.Left="593" Canvas.Top="344"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="474-02-MA1" Canvas.Left="593" Canvas.Top="413"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="474-03-MA1" Canvas.Left="593" Canvas.Top="485"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="474-04-MA1" Canvas.Left="725" Canvas.Top="562"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="474-22-CV1" Canvas.Left="1034" Canvas.Top="413"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="474-21-CV1" Canvas.Left="1034" Canvas.Top="344"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="474-41-PT1" Canvas.Left="975" Canvas.Top="217"/>
+        <Labels:DeviceLabel 
+            ComponentName="474-61-LEV" Canvas.Left="790" Canvas.Top="262" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    </Canvas>
 </UserControl>
