--- a/Prevu.Synoptics.V3085_Anviplas/P570.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P570.xaml
@@ -8,177 +8,123 @@
              xmlns:Belts="clr-namespace:Prevu.Drawings.Machines.Belts;assembly=Prevu.Drawings" 
              x:Class="Prevu.Synoptics.P570" mc:Ignorable="d"
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
-  <Canvas >
-    <Labels:Pipe Width="272" StatusComponent="580-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1134" Canvas.Top="645" HorizontalAlignment="Center" VerticalAlignment="Top">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="0"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe Width="170" StatusComponent="570-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="770" Canvas.Top="564" HorizontalAlignment="Center" VerticalAlignment="Top">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="352" StatusComponent="544-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="286" Canvas.Top="301">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="298" StatusComponent="564-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="296" Canvas.Top="327">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="202" StatusComponent="564-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="248" Canvas.Top="181">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="0"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="317" StatusComponent="544-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="150" Canvas.Top="128">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="0"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="239" StatusComponent="570-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="621" Canvas.Top="483">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="0"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe Width="126" StatusComponent="570-21-CV1" Color="Air" Height="6" Canvas.Left="472" Canvas.Top="333" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="108" StatusComponent="570-21-CV1" Color="Air" Height="6" Canvas.Left="327" Canvas.Top="333"/>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="49" StatusComponent="570-21-CV1" Color="Air" Height="6" RenderTransformOrigin="0.5,0.5" Canvas.Left="346" Canvas.Top="356">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="49" StatusComponent="570-21-CV1" Color="Air" Height="6" RenderTransformOrigin="0.5,0.5" Canvas.Left="571" Canvas.Top="355">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Machines:NT_ConveyorBelt Canvas.Left="391" Canvas.Top="478" HorizontalAlignment="Center" VerticalAlignment="Top" Width="216" RenderTransformOrigin="0.5,0.5">
-      <Machines:NT_ConveyorBelt.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
-          <SkewTransform/>
-          <RotateTransform/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Machines:NT_ConveyorBelt.RenderTransform>
-    </Machines:NT_ConveyorBelt>
-    <Rectangle HorizontalAlignment="Center" Height="4" Stroke="Black" VerticalAlignment="Top" Width="90" RenderTransformOrigin="0.5,0.5" Canvas.Left="1359" Canvas.Top="650" StrokeThickness="2">
-      <Rectangle.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Rectangle.RenderTransform>
-    </Rectangle>
-    <Machines:External HorizontalAlignment="Center" VerticalAlignment="Top" Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="1374" Canvas.Top="688">
-      <Machines:External.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="0"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Machines:External.RenderTransform>
-    </Machines:External>
-    <Machines:Radar HorizontalAlignment="Center" VerticalAlignment="Top" Height="45" Width="39" Canvas.Left="586" Canvas.Top="356"/>
-    <Machines:Radar HorizontalAlignment="Center" VerticalAlignment="Top" Height="45" Width="39" Canvas.Left="361" Canvas.Top="356"/>
-    <Machines:CV_Valve_001 HorizontalAlignment="Center" VerticalAlignment="Top" Color="Air" Height="52" Width="51" RenderTransformOrigin="0.5,0.5" Canvas.Left="279" Canvas.Top="310">
-      <Machines:CV_Valve_001.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="180"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Machines:CV_Valve_001.RenderTransform>
-    </Machines:CV_Valve_001>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Top" 
-            ComponentName="570-21-CV1" Canvas.Left="178" Canvas.Top="309"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Top" 
-            ComponentName="580-71-ECS1" Canvas.Left="1293" Canvas.Top="574" RenderTransformOrigin="-0.615,-1.061"/>
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="570-01-MA1" Canvas.Left="566" Canvas.Top="514"/>
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="570-41-LT1" Canvas.Left="337" Canvas.Top="406"/>
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="570-41-LT2" Canvas.Left="566" Canvas.Top="406" />
-    <Labels:JumpLabel HorizontalAlignment="Center" 
+    <Canvas >
+        <Labels:Pipe Width="272" StatusComponent="580-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1134" Canvas.Top="645" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="130" StatusComponent="570-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="790" Canvas.Top="584" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="352" StatusComponent="544-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="286" Canvas.Top="301">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="298" StatusComponent="564-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="296" Canvas.Top="327">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="202" StatusComponent="564-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="248" Canvas.Top="181"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="317" StatusComponent="544-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="150" Canvas.Top="128"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Width="166" StatusComponent="570-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="694" Canvas.Top="523"/>
+        <Labels:Pipe Width="182" StatusComponent="570-21-CV1" Color="Air" Height="6" Canvas.Left="472" Canvas.Top="305" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Width="108" StatusComponent="570-21-CV1" Color="Air" Height="6" Canvas.Left="327" Canvas.Top="305"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="77" StatusComponent="570-21-CV1" Color="Air" Height="6" RenderTransformOrigin="0.5,0.5" Canvas.Left="353" Canvas.Top="342">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="77" StatusComponent="570-21-CV1" Color="Air" Height="6" RenderTransformOrigin="0.5,0.5" Canvas.Left="613" Canvas.Top="341">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Machines:V01_NT_NastroBuffer Canvas.Left="362" Canvas.Top="378" Height="166" Width="378" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Rectangle HorizontalAlignment="Center" Height="4" Stroke="Black" VerticalAlignment="Top" Width="90" RenderTransformOrigin="0.5,0.5" Canvas.Left="1359" Canvas.Top="650" StrokeThickness="2">
+            <Rectangle.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Rectangle.RenderTransform>
+        </Rectangle>
+        <Machines:External HorizontalAlignment="Center" VerticalAlignment="Top" Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="1374" Canvas.Top="688"/>
+        <Machines:Radar HorizontalAlignment="Left" VerticalAlignment="Center" Height="45" Width="39" Canvas.Left="642" Canvas.Top="356"/>
+        <Machines:Radar HorizontalAlignment="Left" VerticalAlignment="Center" Height="45" Width="39" Canvas.Left="382" Canvas.Top="356"/>
+        <Machines:CV_Valve_001 HorizontalAlignment="Center" VerticalAlignment="Top" Color="Air" Height="52" Width="51" RenderTransformOrigin="0.5,0.5" Canvas.Left="279" Canvas.Top="282">
+            <Machines:CV_Valve_001.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="180"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:CV_Valve_001.RenderTransform>
+        </Machines:CV_Valve_001>
+        <Machines:NT_ConveyorBelt Canvas.Left="877" Canvas.Top="640" Width="216" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Machines:NT_ConveyorBelt.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:NT_ConveyorBelt.RenderTransform>
+        </Machines:NT_ConveyorBelt>
+        <Labels:JumpLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             JumpFromLabel="570-01-MA1" 
             JumpToLabel="544-01-MA1" Canvas.Left="80" Canvas.Top="98"/>
-    <Labels:JumpLabel HorizontalAlignment="Center" 
+        <Labels:JumpLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             JumpFromLabel="570-01-MA1" 
             JumpToLabel="564-01-MA1" Canvas.Left="178" Canvas.Top="152"/>
-    <Machines:NT_ConveyorBelt Canvas.Left="877" Canvas.Top="640" Width="216" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
-      <Machines:NT_ConveyorBelt.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
-          <SkewTransform/>
-          <RotateTransform/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Machines:NT_ConveyorBelt.RenderTransform>
-    </Machines:NT_ConveyorBelt>
-    <Labels:DeviceLabel 
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="570-21-CV1" Canvas.Left="178" Canvas.Top="281"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Top" 
+            ComponentName="580-71-ECS1" Canvas.Left="1293" Canvas.Top="574" RenderTransformOrigin="-0.615,-1.061"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Top" 
+            ComponentName="570-01-MA1" Canvas.Left="349" Canvas.Top="549"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="570-41-LT1" Canvas.Left="358" Canvas.Top="406"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="570-41-LT2" Canvas.Left="622" Canvas.Top="406" />
+        <Labels:DeviceLabel 
             ComponentName="580-01-MA1" Canvas.Left="1051" Canvas.Top="574" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:DeviceLabel 
-      ComponentName="570-BUFFER" Canvas.Left="490" Canvas.Top="253" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="-0.189,0.7"/>
-  </Canvas>
+        <Labels:DeviceLabel 
+      ComponentName="570-BUFFER" Canvas.Left="506" Canvas.Top="550" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="-0.189,0.7"/>
+    </Canvas>
 </UserControl>
