--- a/Prevu.Synoptics.V2911_Flex/D150.xaml
+++ b/Prevu.Synoptics.V2911_Flex/D150.xaml
@@ -72,7 +72,7 @@
             </Rectangle.RenderTransform>
         </Rectangle>
         <Labels:DeviceLabel 
-            ComponentName="150-01-MA1" Canvas.Left="33" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            ComponentName="150-01-EC1" Canvas.Left="33" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
             ComponentName="151-02-EC1" Canvas.Left="185" Canvas.Top="20" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         
