--- a/Prevu.Synoptics.V2911_Flex/D883.xaml
+++ b/Prevu.Synoptics.V2911_Flex/D883.xaml
@@ -10,11 +10,20 @@
              mc:Ignorable="d" 
              Height="448" Width="498" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="448" Width="498">
-        <Screws:DETAIL_SCW_Flex_Verticale HorizontalAlignment="Left" Width="434" Canvas.Left="38" Canvas.Top="30"/>
-        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="883-61-LEV" SignalName="LSH" FlowDirection="LeftToRight" Canvas.Left="56" Canvas.Top="234"/>
-        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="883-61-LEV" SignalName="LSL" FlowDirection="LeftToRight" Canvas.Left="138" Canvas.Top="326" />
+        <Machines:V01_SCW_DETAIL_Flex_Verticale_DX Canvas.Left="10" Canvas.Top="10" Height="428" Width="478" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
+            <Machines:V01_SCW_DETAIL_Flex_Verticale_DX.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="-1"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:V01_SCW_DETAIL_Flex_Verticale_DX.RenderTransform>
+        </Machines:V01_SCW_DETAIL_Flex_Verticale_DX>
+        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="883-61-LEV" SignalName="LSH" FlowDirection="LeftToRight" Canvas.Left="59" Canvas.Top="181"/>
+        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="883-61-LEV" SignalName="LSL" FlowDirection="LeftToRight" Canvas.Left="122" Canvas.Top="257" />
         <Labels:DeviceLabel HorizontalAlignment="Left" 
          VerticalAlignment="Top" 
-         ComponentName="883-61-LEV" Canvas.Left="165" Canvas.Top="250"/>
+         ComponentName="883-61-LEV" Canvas.Left="59" Canvas.Top="90"/>
     </Canvas>
 </UserControl>
