V2911: Aggiunte viste generali. da completare plantview e waterview

--- a/Prevu.Synoptics.V2911_Flex/P140.xaml
+++ b/Prevu.Synoptics.V2911_Flex/P140.xaml
@@ -52,7 +52,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="48" StatusComponent="190-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1150" Canvas.Top="727" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="48" StatusComponent="190-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1150" Canvas.Top="727" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -62,7 +62,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="48" StatusComponent="190-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1192" Canvas.Top="727" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="48" StatusComponent="190-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1192" Canvas.Top="727" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -72,7 +72,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="150" StatusComponent="180-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="701" Canvas.Top="691" HorizontalAlignment="Left" VerticalAlignment="Center" PipeHeight="Medium">
+        <Labels:Pipe Width="150" StatusComponent="180-01-EC1" RenderTransformOrigin="0.5,0.5" Canvas.Left="701" Canvas.Top="691" HorizontalAlignment="Left" VerticalAlignment="Center" PipeHeight="Medium">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -82,7 +82,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="44" StatusComponent="140-01-MA1" PipeHeight="Medium" Canvas.Left="932" Canvas.Top="184" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe Width="44" StatusComponent="140-01-EC1" PipeHeight="Medium" Canvas.Left="932" Canvas.Top="184" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -92,7 +92,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="120" StatusComponent="150-01-MA1" PipeHeight="Medium" Canvas.Left="1143" Canvas.Top="287" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe Width="120" StatusComponent="150-01-EC1" PipeHeight="Medium" Canvas.Left="1143" Canvas.Top="287" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -118,7 +118,7 @@
         <Labels:Pipe Width="93" StatusComponent="153-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="227" Canvas.Top="397" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="719" StatusComponent="143-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="77" Canvas.Top="248" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="189" StatusComponent="129-01-MA1" PipeHeight="Medium" Canvas.Left="634" Canvas.Top="131"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="104" StatusComponent="150-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="45" Canvas.Top="340">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="104" StatusComponent="150-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="45" Canvas.Top="340">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -129,7 +129,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="115" StatusComponent="120-01-MA1" PipeHeight="Medium" Canvas.Left="124" Canvas.Top="106"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="60" StatusComponent="150-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Height="6" Canvas.Left="1134" Canvas.Top="262">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="60" StatusComponent="150-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Height="6" Canvas.Left="1134" Canvas.Top="262">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -139,7 +139,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="86" StatusComponent="140-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="872" Canvas.Top="203">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="86" StatusComponent="140-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="872" Canvas.Top="203">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -149,7 +149,16 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="1071" StatusComponent="150-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="95" Canvas.Top="290"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="1071" StatusComponent="150-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="95" Canvas.Top="290">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0.039"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="147" StatusComponent="143-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="6" Canvas.Top="319">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -161,8 +170,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="95" StatusComponent="126-01-MA1" PipeHeight="Medium" Canvas.Left="311" Canvas.Top="107" RenderTransformOrigin="0.5,0.5"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="94" StatusComponent="180-01-MA1" Height="14" Canvas.Left="686" Canvas.Top="759" PipeHeight="Medium"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="93" StatusComponent="140-01-MA1" PipeHeight="Medium" Canvas.Left="949" Canvas.Top="201"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="94" StatusComponent="180-01-EC1" Height="14" Canvas.Left="686" Canvas.Top="759" PipeHeight="Medium"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="93" StatusComponent="140-01-EC1" PipeHeight="Medium" Canvas.Left="949" Canvas.Top="201"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="114" StatusComponent="128-01-MA1" PipeHeight="Medium" Canvas.Left="460" Canvas.Top="107"/>
         <Labels:Pipe Width="37" StatusComponent="155-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="424" Canvas.Top="456" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
@@ -195,7 +204,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="52" StatusComponent="180-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="788" Canvas.Top="644" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="52" StatusComponent="180-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="788" Canvas.Top="644" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
