--- a/Prevu.Synoptics.V3085_Anviplas/P230.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P230.xaml
@@ -254,7 +254,7 @@
         <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             JumpFromLabel="208-01-MA1" 
-            JumpToLabel="024-01-MA1" Canvas.Left="42" Canvas.Top="98"/>
+            JumpToLabel="020-SHREDDER" Canvas.Left="42" Canvas.Top="98"/>
         <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="210-HYD" DetailsPageName="D210" Canvas.Left="600" Canvas.Top="567"  />
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Top" 
