--- a/Prevu.Synoptics.V3085_Anviplas/P430.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P430.xaml
@@ -222,8 +222,8 @@
             VerticalAlignment="Center" 
             JumpFromLabel="431-01-MA1" 
             JumpToLabel="440-01-MA1" Canvas.Left="1360" Canvas.Top="474"/>
-        <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="430-PADDLES" DetailsPageName="D430" HideComponentName="True" Canvas.Left="839" Canvas.Top="180"/>
-        <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="430-DISTRIB" DetailsPageName="D430_2" HideComponentName="True" Canvas.Left="1015" Canvas.Top="180"/>
+        <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="430-SEP-VIEW" DetailsPageName="D430" HideComponentName="True" Canvas.Left="839" Canvas.Top="180"/>
+        <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="430-DIST-VIEW" DetailsPageName="D430_2" HideComponentName="True" Canvas.Left="1015" Canvas.Top="180"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="432-01-MA1" Canvas.Left="945" Canvas.Top="460"/>
