--- a/Prevu.Synoptics.V3085_Anviplas/P464.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P464.xaml
@@ -92,7 +92,7 @@
         <Ellipse HorizontalAlignment="Center" Height="16" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="1011" Canvas.Top="287"/>
         <Labels:JumpLabel 
             JumpFromLabel="482-21-CV1" 
-            JumpToLabel="482-21-CV1" Canvas.Left="1249" Canvas.Top="601" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            JumpToLabel="492-01-MA1" Canvas.Left="1249" Canvas.Top="601" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             JumpFromLabel="482-01-MA1" 
