--- a/Prevu.Synoptics.V3085_Anviplas/P474.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P474.xaml
@@ -12,7 +12,7 @@
     <Canvas>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="310" StatusComponent="474-04-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="866" Canvas.Top="707"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="108" StatusComponent="492-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="1210" Canvas.Top="701"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="62" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="492-21-CV1" Canvas.Left="1162" Canvas.Top="656">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="62" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="482-21-CV1" Canvas.Left="1162" Canvas.Top="656">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -71,7 +71,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="64" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="492-21-CV1" Canvas.Left="1131" Canvas.Top="627"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="64" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="482-21-CV1" Canvas.Left="1131" Canvas.Top="627"/>
         <Machines:V01_WCE_Centrifuge Canvas.Left="302" Canvas.Top="43" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Blowers:VT_CMM_BlowerAirCompressor VerticalAlignment="Top" Height="54" Canvas.Left="1166" Canvas.Top="685" HorizontalAlignment="Center"/>
         <Machines:V01_FP_FiltroPressa_w3Screw Canvas.Left="615" Canvas.Top="265" Height="365" Width="372" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -81,8 +81,7 @@
         <Rectangle HorizontalAlignment="Center" Height="35" Stroke="Black" VerticalAlignment="Top" Width="2" Canvas.Left="1018" Canvas.Top="263"/>
         <Ellipse HorizontalAlignment="Center" Height="16" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="1011" Canvas.Top="287"/>
         <Labels:JumpLabel 
-            JumpFromLabel="482-21-CV1" 
-            JumpToLabel="492-21-CV1" Canvas.Left="1049" Canvas.Top="601" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            JumpFromLabel="492-21-CV1" Canvas.Left="1049" Canvas.Top="601" HorizontalAlignment="Left" VerticalAlignment="Center" JumpToLabel="482-21-CV1"/>
         <Labels:JumpLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             JumpFromLabel="492-01-MA1" 
